--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,17 @@
     <title>Angular Webpack Starter</title>
     <meta id="viewport" name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 
+    <link rel="manifest" href="/manifest.json">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="angular-env">
+    <meta name="apple-mobile-web-app-title" content="angular-env">
+    <meta name="theme-color" content="#C3002F">
+    <meta name="msapplication-navbutton-color" content="#C3002F">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="msapplication-starturl" content="/">
+
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <!--[if lt IE 9]>
