--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
   </head>
   <body dir="ltr">
     <!--[if lt IE 8]>
@@ -35,5 +34,6 @@
     <noscript>Sorry, your browser does not support JavaScript, or JavaScript is disabled!</noscript>
 
     <app-root></app-root>
+    <script src="sw.js"></script>
   </body>
 </html>
