--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html> <html lang="en"> <head> <base href="/"> <meta charset="UTF-8"/> <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/> <title>Angular Webpack Starter</title> <meta id="viewport" name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"/> <link rel="manifest" href="/manifest.json"> <meta name="mobile-web-app-capable" content="yes"> <meta name="apple-mobile-web-app-capable" content="yes"> <meta name="application-name" content="angular-env"> <meta name="apple-mobile-web-app-title" content="angular-env"> <meta name="theme-color" content="#C3002F"> <meta name="msapplication-navbutton-color" content="#C3002F"> <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <meta name="msapplication-starturl" content="/"> <link rel="icon" href="/favicon.ico"/> <link rel="apple-touch-icon" href="/favicon.ico"/> <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]--> <link rel="preload" href="/js/vendor.f62dc3.js" as="script">
-<link rel="preload" href="/js/app.f62dc3.js" as="script">
-<link rel="preload" href="/js/manifest.f62dc3.js" as="script">
-<link href="/css/app.f62dc3.css" rel="stylesheet"></head> <body dir="ltr"> <!--[if lt IE 8]>
+    <![endif]--> <link rel="preload" href="js/vendor.1947a8.js" as="script">
+<link rel="preload" href="js/app.1947a8.js" as="script">
+<link rel="preload" href="js/manifest.1947a8.js" as="script">
+<link href="css/app.1947a8.css" rel="stylesheet"></head> <body dir="ltr"> <!--[if lt IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]--> <noscript>Sorry, your browser does not support JavaScript, or JavaScript is disabled!</noscript> <app-root></app-root> <script type="text/javascript" src="/js/manifest.f62dc3.js"></script><script type="text/javascript" src="/js/vendor.f62dc3.js"></script><script type="text/javascript" src="/js/app.f62dc3.js"></script></body> </html> 
+    <![endif]--> <noscript>Sorry, your browser does not support JavaScript, or JavaScript is disabled!</noscript> <app-root></app-root> <script type="text/javascript" src="js/manifest.1947a8.js"></script><script type="text/javascript" src="js/vendor.1947a8.js"></script><script type="text/javascript" src="js/app.1947a8.js"></script></body> </html> 
